force-app/main/default/objects/NI_Distribution__c/NI_Distribution__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-015836

Used by Finance as part of CAPS Royalty and Amortization management</description>
    <label>Distribution</label>
    <nameField>
        <displayFormat>DIST-{0000}</displayFormat>
        <label>Distribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>