force-app/main/default/objects/NI_Distribution__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>