force-app/main/default/objects/NI_Distribution__c/fields/Connect_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Connect_Opt_Out_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Connect+ Opt-Out Date</label>
    <type>Date</type>
</CustomField>