force-app/main/default/objects/NI_Distribution__c/fields/Customer_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Agreement__c</fullName>
    <label>Customer Agreement</label>
    <referenceTo>NI_Customer_Agreement__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>