force-app/main/default/objects/NI_Distribution__c/fields/Deployment_Instance__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Instance</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>