force-app/main/default/objects/NI_Distribution__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <formula>Customer_Agreement__r.GL_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Code</label>
    <type>Text</type>
</CustomField>