force-app/main/default/objects/NI_Distribution__c/fields/Hilton_Connect__c.field-meta.xml
<CustomField>
    <fullName>Hilton_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hilton Connect+</label>
    <type>Checkbox</type>
</CustomField>