force-app/main/default/objects/NI_Distribution__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <formula>Customer_Agreement__r.Install_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>