force-app/main/default/objects/NI_Distribution__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>