force-app/main/default/objects/NI_Distribution__c/fields/Invoice_Detail__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Detail</label>
    <referenceTo>NI_Invoice_Detail__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>