force-app/main/default/objects/NI_Distribution__c/fields/Invoice_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Amount__c</fullName>
    <label>Invoice Paid Amount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>