force-app/main/default/objects/NI_Distribution__c/fields/Invoice_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Paid Date</label>
    <type>Date</type>
</CustomField>