force-app/main/default/objects/NI_Distribution__c/fields/Management_Company__c.field-meta.xml
<CustomField>
    <fullName>Management_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Management Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distributions (Management Company)</relationshipLabel>
    <relationshipName>Distributions1</relationshipName>
    <type>Lookup</type>
</CustomField>