force-app/main/default/objects/NI_Distribution__c/fields/NI_Invoice__c.field-meta.xml
<CustomField>
    <fullName>NI_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>NI_Invoice__c</referenceTo>
    <relationshipLabel>Distributions</relationshipLabel>
    <relationshipName>Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>