force-app/main/default/objects/NI_Distribution__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Europe Africa Middle East</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>AP China</fullName>
            </value>
            <value>
                <fullName>AP Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>