force-app/main/default/objects/NI_Distribution__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <formula>Customer_Agreement__r.Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor</label>
    <type>Text</type>
</CustomField>