force-app/main/default/objects/NI_Distribution__c/recordTypes/Amortization.recordType-meta.xml
<RecordType>
    <fullName>Amortization</fullName>
    <active>true</active>
    <label>Amortization</label>
</RecordType>