force-app/main/default/objects/NI_Distribution__c/recordTypes/Royalty.recordType-meta.xml
<RecordType>
    <fullName>Royalty</fullName>
    <active>true</active>
    <label>Royalty</label>
</RecordType>