force-app/main/default/objects/NI_Distribution__c/validationRules/Locked_for_Editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Locked_for_Editing</fullName>
    <active>true</active>
    <description>If the &quot;Locked&quot; field is set to true (checked) then no changes can be made to this distribution record</description>
    <errorConditionFormula>AND(Locked__c = true, PRIORVALUE(Locked__c) = true)</errorConditionFormula>
    <errorMessage>This record is locked for editing.  No additional changes can be made</errorMessage>
</ValidationRule>